objects/Vosf_Question_Visibility_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>=</fullName>
                </value>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>&gt;=</fullName>
                </value>
                <value>
                    <fullName>&lt;=</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_Choice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Choice</label>
        <referenceTo>Vosf_Question_Choice__c</referenceTo>
        <relationshipLabel>Question Visibility Criteria</relationshipLabel>
        <relationshipName>Question_Visibility_Criteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Visibility_Rule__c</fullName>
        <label>Question Visibility Rule</label>
        <referenceTo>Vosf_Question_Visibility_Rule__c</referenceTo>
        <relationshipLabel>Question Visibility Criteria</relationshipLabel>
        <relationshipName>Question_Visibility_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Question Visibility Criteria</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Question Visibility Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question Visibility Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>